--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: agemily
 description: "Cross-platform AI chat agent"
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
@@ -19,6 +19,7 @@ dependencies:
   path_provider: ^2.1.0
   path: ^1.9.0
   flutter_secure_storage: ^9.2.0
+  flutter_math_fork: ^0.7.2
   flutter_markdown: ^0.7.4
   flutter_chat_ui: ^1.6.15
   flutter_chat_types: ^3.6.2
